fixed vertical stretch flex crash on safari. using grid now.

--- a/styles.scss
+++ b/styles.scss
@@ -22,6 +22,11 @@ body {
   opacity: 0;
 }
 
+.stretch-wrapper {
+  height: 100%;
+  display: grid;
+  grid-template-rows: 1fr auto;
+}
 
 .large {
   font-family: "Playfair Display", serif;
@@ -163,7 +168,7 @@ header {
     a.small {
       font-weight: lighter;
       color: white;
-      // font-size: min(10vw, 60px);
+      font-size: min(10vw, 60px);
       display: block;
       text-align: left;
       margin-left: 10%;
@@ -178,16 +183,16 @@ header {
         animation-delay: 0;
       }
       &:nth-child(2) {
-        animation-delay: 150ms;
+        animation-delay: 100ms;
       }
       &:nth-child(3) {
-        animation-delay: 300ms;
+        animation-delay: 200ms;
       }
       &:nth-child(4) {
-        animation-delay: 450ms;
+        animation-delay: 300ms;
       }
       &:nth-child(5) {
-        animation-delay: 600ms;
+        animation-delay: 400ms;
       }
     }
   }
@@ -265,7 +270,7 @@ aside {
 }
 
 section#home {
-  // min-height: 95vh;
+  min-height: 95vh;
   .text-content {
     max-width: 490px;
   }
